# AIded_Evolution

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_GAP.md  Cargo.toml  JOURNAL.md  LEARNINGS.md  README.md  ROADMAP.md  SESSION_PLAN.md  SOCIAL_LEARNINGS.md
.github/: FUNDING.yml
.github/workflows/: evolve.yml  release.yml  social.yml
benchmarks/: README.md  offline.sh
docs/: index.html
docs/book/: 404.html  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
docs/book/configuration/: models.html  permissions.html  skills.html  system-prompts.html  thinking.html
docs/book/contributing/: mutation-testing.html
docs/book/features/: context.html  cost-tracking.html  git.html  sessions.html
docs/book/getting-started/: installation.html  quick-start.html
docs/book/troubleshooting/: common-issues.html  safety.html
docs/book/usage/: commands.html  multi-line.html  repl.html  single-prompt.html
docs/src/: SUMMARY.md  architecture.md
docs/src/features/: cost-tracking.md
docs/src/troubleshooting/: common-issues.md
docs/src/usage/: repl.md
guide/src/: SUMMARY.md
memory/: active_social_learnings.md  learnings.jsonl  social_learnings.jsonl
scripts/: daily_diary.sh  evolve.sh  format_discussions.py  format_issues.py  social.sh  yoyo_context.sh
skills/communicate/: SKILL.md
skills/evolve/: SKILL.md
skills/self-assess/: SKILL.md
skills/social/: SKILL.md
src/: cli.rs  commands.rs  commands_git.rs  commands_project.rs  commands_session.rs  format.rs  git.rs  main.rs  prompt.rs  repl.rs
tests/: integration.rs
(+9 files in other folders)
